--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="js-sticky">
             <div class="bg-black js-scale-change">
                 <p class="bg-text">
-                gsap.scrolltrigger
+                scrolltrigger.create
             </p>
             </div>
         </div>
