テキスト変更

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <div class="bg-black js-scale-change">
                 <p class="bg-text">
                 scrolltrigger.create
+                テキストテキスト
             </p>
             </div>
         </div>
