--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="bg-black js-scale-change">
                 <p class="bg-text">
                 scrolltrigger.create
-                テキストテキスト
+                テキストテキストbranchA
             </p>
             </div>
         </div>
